Cambio como asigna puntaje TipoPregunta
Co-authored-by: Valentino Ceniceros <vceniceros@fi.uba.ar>
Co-authored-by: Ivan Fuschetto <ifuschetto@fi.uba.ar>
Co-authored-by: Felipe Santellan <fsantellan@fi.uba.ar>
Co-authored-by: Ignacio Orgeira <nachoorgeira@gmail.com>