@@ -4,13 +4,14 @@ import edu.fiuba.algo3.modelo.jugador.Jugador;
 import edu.fiuba.algo3.modelo.pregunta.Clasica;
 import edu.fiuba.algo3.modelo.pregunta.ConPenalidad;
 import edu.fiuba.algo3.modelo.pregunta.Pregunta;
-import edu.fiuba.algo3.modelo.pregunta.PreguntaVerdaderoFalso;
+import edu.fiuba.algo3.modelo.pregunta.VerdaderoOFalso;
 import edu.fiuba.algo3.modelo.respuesta.Respuesta;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+
 import java.util.List;
 
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -18,6 +19,14 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 public class VerdaderoFalsoTest {
     private Jugador jugador1;
     private Jugador jugador2;
+    private static Clasica clasica;
+    private static ConPenalidad conPenalidad;
+
+    @BeforeAll
+    public static void setUpClass() {
+        clasica=new Clasica();
+        conPenalidad=new ConPenalidad();
+    }
 
     @BeforeEach
     public void setUp() {
@@ -27,16 +36,16 @@ public class VerdaderoFalsoTest {
 
     @Test
     public void test01VerdaderoFalsoClasicoAsignaPuntajeCorrectoAJugadoresQueRespondieronCorrectamente() {
-        Respuesta respuesta1 = new Respuesta(Arrays.asList("Verdadero"), jugador1);
-        Respuesta respuesta2 = new Respuesta(Arrays.asList("Verdadero"), jugador2);
+        Respuesta respuesta1 = new Respuesta(List.of("Verdadero"), jugador1);
+        Respuesta respuesta2 = new Respuesta(List.of("Verdadero"), jugador2);
 
         List<Respuesta> respuestas = new ArrayList<>();
         respuestas.add(respuesta1);
         respuestas.add(respuesta2);
 
-        Pregunta pregunta = new PreguntaVerdaderoFalso("¿Las palomas vuelan?", Arrays.asList("Verdadero"), new Clasica());
+        Pregunta pregunta = new VerdaderoOFalso("¿Las palomas vuelan?", List.of("Verdadero"), clasica);
 
-        pregunta.validarRespuestas(respuestas);
+        pregunta.asignarPuntajes(respuestas);
 
         assertEquals(1, jugador1.obtenerPuntos());
         assertEquals(1, jugador2.obtenerPuntos());
@@ -44,16 +53,16 @@ public class VerdaderoFalsoTest {
 
     @Test
     public void test02VerdaderoFalsoClasicoAsignaPuntajeCorrectoAJugadoresQueRespondieronIncorrectamente() {
-        Respuesta respuesta1 = new Respuesta(Arrays.asList("Falso"), jugador1);
-        Respuesta respuesta2 = new Respuesta(Arrays.asList("Falso"), jugador2);
+        Respuesta respuesta1 = new Respuesta(List.of("Falso"), jugador1);
+        Respuesta respuesta2 = new Respuesta(List.of("Falso"), jugador2);
 
         List<Respuesta> respuestas = new ArrayList<>();
         respuestas.add(respuesta1);
         respuestas.add(respuesta2);
 
-        Pregunta pregunta = new PreguntaVerdaderoFalso("¿Las palomas vuelan?", Arrays.asList("Verdadero"), new Clasica());
+        Pregunta pregunta = new VerdaderoOFalso("¿Las palomas vuelan?", List.of("Verdadero"),clasica );
 
-        pregunta.validarRespuestas(respuestas);
+        pregunta.asignarPuntajes(respuestas);
 
         assertEquals(0, jugador1.obtenerPuntos());
         assertEquals(0, jugador2.obtenerPuntos());
@@ -61,16 +70,16 @@ public class VerdaderoFalsoTest {
 
     @Test
     public void test03VerdaderoFalsoConPenalidadAsignaPuntajeCorrectoAJugadoresQueRespondieronCorrectamente() {
-        Respuesta respuesta1 = new Respuesta(Arrays.asList("Verdadero"), jugador1);
-        Respuesta respuesta2 = new Respuesta(Arrays.asList("Verdadero"), jugador2);
+        Respuesta respuesta1 = new Respuesta(List.of("Verdadero"), jugador1);
+        Respuesta respuesta2 = new Respuesta(List.of("Verdadero"), jugador2);
 
         List<Respuesta> respuestas = new ArrayList<>();
         respuestas.add(respuesta1);
         respuestas.add(respuesta2);
 
-        Pregunta pregunta = new PreguntaVerdaderoFalso("¿Las palomas vuelan?", Arrays.asList("Verdadero"), new ConPenalidad());
+        Pregunta pregunta = new VerdaderoOFalso("¿Las palomas vuelan?", List.of("Verdadero"), conPenalidad);
 
-        pregunta.validarRespuestas(respuestas);
+        pregunta.asignarPuntajes(respuestas);
 
         assertEquals(1, jugador1.obtenerPuntos());
         assertEquals(1, jugador2.obtenerPuntos());
@@ -78,16 +87,16 @@ public class VerdaderoFalsoTest {
 
     @Test
     public void test04VerdaderoFalsoConPenalidadAsignaPuntajeCorrectoAJugadoresQueRespondieronIncorrectamente() {
-        Respuesta respuesta1 = new Respuesta(Arrays.asList("Falso"), jugador1);
-        Respuesta respuesta2 = new Respuesta(Arrays.asList("Falso"), jugador2);
+        Respuesta respuesta1 = new Respuesta(List.of("Falso"), jugador1);
+        Respuesta respuesta2 = new Respuesta(List.of("Falso"), jugador2);
 
         List<Respuesta> respuestas = new ArrayList<>();
         respuestas.add(respuesta1);
         respuestas.add(respuesta2);
 
-        Pregunta pregunta = new PreguntaVerdaderoFalso("¿Las palomas vuelan?", Arrays.asList("Verdadero"), new ConPenalidad());
+        Pregunta pregunta = new VerdaderoOFalso("¿Las palomas vuelan?", List.of("Verdadero"), conPenalidad);
 
-        pregunta.validarRespuestas(respuestas);
+        pregunta.asignarPuntajes(respuestas);
 
         assertEquals(-1, jugador1.obtenerPuntos());
         assertEquals(-1, jugador2.obtenerPuntos());
